# monorepo

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  README.md
apps/uptime-monitor/: BUILD.bazel
apps/uptime-monitor/cmd/: main.go
apps/uptime-monitor/internal/: monitor.go  monitor_test.go
tools/linting/: BUILD.bazel
tools/scripts/: BUILD.bazel
