load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "uptime-monitor",
    srcs = [
        "cmd/main.go",
    ],
    deps = [
        ":monitor",  # Core logic 
    ],
)

go_library(
    name = "monitor",
    srcs = [
        "internal/monitor.go",
    ],
    # importpath is optional, but it specifies the package path in Go for better integration with tooling (e.g., go get).
    importpath = "apps/uptime-monitor/internal/monitor", 
)

go_test(
    name = "monitor_test",
    srcs = ["internal/monitor_test.go"],
    embed = [":monitor"],
)
